--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Foodee &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Olson Industries Inc.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="keywords" content="development, designer, science, technology, IA, data science, machine learning" />
+	<meta name="author" content="Olson Industries Inc. ft. FREEHTML5.CO" />
 		
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -63,15 +62,15 @@
 				<div class="fh5co-text">
 					<div class="container">
 						<div class="row">
-							<h1 class="to-animate">foodee</h1>
-							<h2 class="to-animate">Lovely Designed <span>by</span> <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+							<h1 class="to-animate">Olson</h1>
+							<h2 class="to-animate">Industries Inc. <span></span> <a href="https://github.com/Sitowsky" target="_blank">Developement, science and more.</a></h2>
 						</div>
 					</div>
 				</div>
 			  	<ul class="slides">
-			   	<li style="background-image: url(images/slide_1.jpg);" data-stellar-background-ratio="0.5"></li>
-			   	<li style="background-image: url(images/slide_2.jpg);" data-stellar-background-ratio="0.5"></li>
-			   	<li style="background-image: url(images/slide_3.jpg);" data-stellar-background-ratio="0.5"></li>
+			   	<li style="background-image: url(images/slide_one.jpg);" data-stellar-background-ratio="0.5"></li>
+			   	<li style="background-image: url(images/slide_two.jpg);" data-stellar-background-ratio="0.5"></li>
+			   	<li style="background-image: url(images/slide_three.jpg);" data-stellar-background-ratio="0.5"></li>
 			  	</ul>
 
 			</div>
