--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<div class="container">
 						<div class="row">
 							<h1 class="to-animate">Olson</h1>
-							<h2 class="to-animate">Industries Inc. <span></span> <a href="https://github.com/Sitowsky" target="_blank">Developement, science and more.</a></h2>
+							<h2 class="to-animate">Industries Inc. <span></span> <a href="https://github.com/Sitowsky" target="_blank">Development, science and more.</a></h2>
 						</div>
 					</div>
 				</div>
@@ -82,16 +82,14 @@
 				<div class="container-fluid">
 					<div class="fh5co-menu-1">
 						<a href="#" data-nav-section="home">Home</a>
-						<a href="#" data-nav-section="about">About</a>
-						<a href="#" data-nav-section="features">Features</a>
+						<a href="#" data-nav-section="about">About me</a>
 					</div>
 					<div class="fh5co-logo">
-						<a href="index.html">foodee</a>
+						<a href="index.html">Olson Industries Inc.</a>
 					</div>
 					<div class="fh5co-menu-2">
-						<a href="#" data-nav-section="menu">Menu</a>
-						<a href="#" data-nav-section="events">Events</a>
-						<a href="#" data-nav-section="reservation">Reservation</a>
+						<a href="#" data-nav-section="events">Projects</a>
+						<a href="#" data-nav-section="reservation">Contact</a>
 					</div>
 				</div>
 				
